Неделя 4. Отзывы. Форма с тегами и кнопками (не PP)

--- a/reviews.html
+++ b/reviews.html
@@ -217,42 +217,75 @@
             <div class="form__row">
               <textarea name="" id="" cols="30" rows="10" class="form__input form__input_textarea" placeholder="Напишите свой честный отзыв ;)"></textarea> <!--модификатор-->
             </div>
-            <h5 for="" class="form__radio-title">Какими услугами банка пользуетесь?</h5>
-            <ul class="form__radio-services">
-              <li class="form__radio-service">
-                <button class="form__btn">
-                  <h6 class="form__btn-name">Карта базовая</h6>
-                  <input type="radio" name="services" id="base-card" class="form__btn-input">
-                </button>
-              </li>
-              <li class="form__radio-service">
-                
-              </li>
-              <li class="form__radio-service">
-
-              </li>
-              <li class="form__radio-service">
-
-              </li>
-              <li class="form__radio-service">
-
-              </li>
-              <li class="form__radio-service">
-
-              </li>
-              <li class="form__radio-service">
-
-              </li>
-              <li class="form__radio-service">
-
-              </li>
-              <li class="form__radio-service">
-
-              </li>
-              <li class="form__radio-service">
-
-              </li>
-            </ul>
+            <div class="form__controls">
+              <h5 class="form__controls-title">Какими услугами банка пользуетесь?</h5>
+              <ul class="controls">
+                <li class="controls__item">
+                  <label class="controls__elem">
+                    <input type="checkbox" class="controls__checkbox">
+                    <div class="controls__tag tag">Карта базовая</div> <!--модификатор-->
+                  </label>
+                </li>
+                <li class="controls__item">
+                  <label class="controls__elem">
+                    <input type="checkbox" class="controls__checkbox">
+                    <div class="controls__tag tag">Ипотека на 10 лет</div> <!--модификатор-->
+                  </label>
+                </li>
+                <li class="controls__item">
+                  <label class="controls__elem">
+                    <input type="checkbox" class="controls__checkbox">
+                    <div class="controls__tag tag">Карта оптима</div> <!--модификатор-->
+                  </label>
+                </li>
+                <li class="controls__item">
+                  <label class="controls__elem">
+                    <input type="checkbox" class="controls__checkbox">
+                    <div class="controls__tag tag">Автокредит на 5 лет</div> <!--модификатор-->
+                  </label>
+                </li>
+                <li class="controls__item">
+                  <label class="controls__elem">
+                    <input type="checkbox" class="controls__checkbox">
+                    <div class="controls__tag tag">Никакими</div> <!--модификатор-->
+                  </label>
+                </li>
+                <li class="controls__item">
+                  <label class="controls__elem">
+                    <input type="checkbox" class="controls__checkbox">
+                    <div class="controls__tag tag">Ипотека на 20 лет</div> <!--модификатор-->
+                  </label>
+                </li>
+                <li class="controls__item">
+                  <label class="controls__elem">
+                    <input type="checkbox" class="controls__checkbox">
+                    <div class="controls__tag tag">Другое</div> <!--модификатор-->
+                  </label>
+                </li>
+                <li class="controls__item">
+                  <label class="controls__elem">
+                    <input type="checkbox" class="controls__checkbox">
+                    <div class="controls__tag tag">Страхование</div> <!--модификатор-->
+                  </label>
+                </li>
+                <li class="controls__item">
+                  <label class="controls__elem">
+                    <input type="checkbox" class="controls__checkbox">
+                    <div class="controls__tag tag">Кредитная карта</div> <!--модификатор-->
+                  </label>
+                </li>
+                <li class="controls__item">
+                  <label class="controls__elem">
+                    <input type="checkbox" class="controls__checkbox">
+                    <div class="controls__tag tag">Автокредит на 7 лет</div> <!--модификатор-->
+                  </label>
+                </li>
+              </ul>
+            </div>
+            <div class="form__btns">
+              <button type="reset" class="btn form__button btn_color_grey">Очистить</button> <!--МИКС-->
+              <button type="submit" class="btn form__button btn_color_black">Отправить</button> <!--МИКС-->
+            </div>
           </form>
         </div>
       </section>
