--- a/service.html
+++ b/service.html
@@ -41,7 +41,12 @@
               <!--модификатор-->
               <address class="contacts">
                 <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-                <div class="contacts__dropdown-title">График работы</div>
+                <div class="contacts__dropdown">
+                  <div class="contacts__dropdown-title">График работы</div>
+                  <div class="contacts__dropdown-text">
+                    <span class="contacts__dropdown-workhours">пн-вс: 09:00 - 20:00</span> Обед: 14:00-14:30
+                  </div>
+                </div>
               </address>
             </div>
           </header>
