Неделя 4. Отзывы. Стилизация PP

--- a/reviews.html
+++ b/reviews.html
@@ -66,7 +66,7 @@
         </div>
       </div>
 
-      <main class="page-content">
+      <main class="page-content page-content_mb_small">
         <div class="container">
           <ul class="reviews">            
             <li class="reviews__item review"> 
@@ -211,9 +211,9 @@
         </div>
       </section>
 
-      <section class="inner-section inner-section_bg_grey"> <!--для переиспользования--> <!--модификатор-->
+      <section class="inner-section inner-section_bg_grey inner-section_pt_big"> <!--для переиспользования--> <!--модификатор-->
         <div class="container">
-          <h2 class="inner-section__title">Оставьте отзыв</h2>
+          <h2 class="inner-section__title inner-section__title_mb_small">Оставьте отзыв</h2>
           <form action="" method="" class="form">
             <div class="form__row">
               <input type="text" class="form__input" placeholder="Ваше имя">
