Неделя 4. Приветственная страница. Правки + анимация

--- a/welcome.html
+++ b/welcome.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-  <div class="wrapper welcome-page-wrapper"><!--обертка-->
-    <div class="container">
+  <div class="welcome-page"><!--обертка-->
+    <div class="welcome-page__container">
 
-      <main class="welcome-page">
+      <main class="welcome-page__content">
         <div class="logo logo_vertical">
           <img src="./images/logo-vertical.png" alt="lion bank vertical logo" class="logo__image">
         </div>
-        <a href="/" class="btn btn_color_ginger">Войти</a> <!--модификатор ключ-значение-->
+        <a href="#" class="btn btn_color_ginger">Войти</a> <!--модификатор ключ-значение-->
       </main>
               
     </div>    
