Неделя 4. Мини-правки

--- a/welcome.html
+++ b/welcome.html
@@ -16,7 +16,7 @@
         <div class="logo logo_vertical">
           <img src="./images/logo-vertical.png" alt="lion bank vertical logo" class="logo__image">
         </div>
-        <a href="#" class="btn btn_color_ginger">Войти</a> <!--модификатор ключ-значение-->
+        <a href="./index.html" class="btn btn_color_ginger">Войти</a> <!--модификатор ключ-значение-->
       </main>
               
     </div>    
