--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
           <!--модификатор-->
           <header class="header">
             <div class="header__col">
-              <a href="/" class="logo logo_horizontal"> <!--модификатор-->
+              <a href="./index.html" class="logo logo_horizontal"> <!--модификатор-->
                 <img src="./images/logo.png" alt="lion bank logo" class="logo__image">
               </a>
               <nav class="menu">
                 <ul class="menu__list">
                   <li class="menu__item menu__item_active"> <!--модификатор-->
-                    <a href="/" class="menu__link">Главная</a>
+                    <a href="./index.html" class="menu__link">Главная</a>
                   </li>
                   <li class="menu__item">                    
                     <a href="./service.html" class="menu__link">Услуги</a>
@@ -237,13 +237,13 @@
         <div class="footer">
           <!--для переиспользования-->
           <div class="footer__col">
-            <a href="/" class="logo logo_horizontal"> <!--модификатор-->
+            <a href="./index.html" class="logo logo_horizontal"> <!--модификатор-->
               <img src="./images/logo.png" alt="lion bank logo" class="logo__image">
             </a>
             <nav class="menu">
               <ul class="menu__list">
                 <li class="menu__item">
-                  <a href="/" class="menu__link">Главная</a>
+                  <a href="./index.html" class="menu__link">Главная</a>
                 </li>
                 <li class="menu__item">
                   <a href="./service.html" class="menu__link">Услуги</a>
