Неделя 4. transition на ховеры

--- a/reviews.html
+++ b/reviews.html
@@ -55,7 +55,7 @@
           <nav class="breadcrumbs">
             <ul class="breadcrumbs__list">
               <li class="breadcrumbs__item">
-                <a href="/" class="breadcrumbs__link">Главная</a>
+                <a href="./main.html" class="breadcrumbs__link">Главная</a>
               </li>
               <li class="breadcrumbs__item breadcrumbs__item_active">
                 <!--модификатор-->
@@ -216,11 +216,11 @@
           <h2 class="inner-section__title inner-section__title_mb_small">Оставьте отзыв</h2>
           <form action="" method="" class="form">
             <div class="form__row">
-              <input type="text" class="form__input" placeholder="Ваше имя">
-              <input type="text" class="form__input" placeholder="Ссылка на профиль VK">
+              <input type="text" name="name" class="form__input" placeholder="Ваше имя">
+              <input type="text" name="social" class="form__input" placeholder="Ссылка на профиль VK">
             </div>
             <div class="form__row">
-              <textarea name="" id="" cols="30" rows="10" class="form__input form__input_textarea" placeholder="Напишите свой честный отзыв ;)"></textarea> <!--модификатор-->
+              <textarea name="comment" id="" cols="30" rows="10" class="form__input form__input_textarea" placeholder="Напишите свой честный отзыв ;)"></textarea> <!--модификатор-->
             </div>
             <div class="form__controls">
               <h5 class="form__controls-title">Какими услугами банка пользуетесь?</h5>
