--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=1200, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="./css/style.css">
-  <title>Lion Bank - Главная</title>
+  <title>Lion Bank - Приветственная страница</title>
 </head>
 
 <body>
