Неделя 4. Правки по W3C Validator

--- a/reviews.html
+++ b/reviews.html
@@ -214,13 +214,13 @@
       <section class="inner-section inner-section_bg_grey inner-section_pt_big"> <!--для переиспользования--> <!--модификатор-->
         <div class="container">
           <h2 class="inner-section__title inner-section__title_mb_small">Оставьте отзыв</h2>
-          <form action="" method="" class="form">
+          <form class="form">
             <div class="form__row">
               <input type="text" name="name" class="form__input" placeholder="Ваше имя">
               <input type="text" name="social" class="form__input" placeholder="Ссылка на профиль VK">
             </div>
             <div class="form__row">
-              <textarea name="comment" id="" cols="30" rows="10" class="form__input form__input_textarea" placeholder="Напишите свой честный отзыв ;)"></textarea> <!--модификатор-->
+              <textarea name="comment" cols="30" rows="10" class="form__input form__input_textarea" placeholder="Напишите свой честный отзыв ;)"></textarea> <!--модификатор-->
             </div>
             <div class="form__controls">
               <h5 class="form__controls-title">Какими услугами банка пользуетесь?</h5>
@@ -228,61 +228,61 @@
                 <li class="controls__item">
                   <label class="controls__elem">
                     <input type="checkbox" class="controls__checkbox">
-                    <div class="controls__tag tag">Карта базовая</div> <!--модификатор-->
+                    <span class="controls__tag tag">Карта базовая</span> <!--модификатор-->
                   </label>
                 </li>
                 <li class="controls__item">
                   <label class="controls__elem">
                     <input type="checkbox" class="controls__checkbox">
-                    <div class="controls__tag tag">Ипотека на 10 лет</div> <!--модификатор-->
+                    <span class="controls__tag tag">Ипотека на 10 лет</span> <!--модификатор-->
                   </label>
                 </li>
                 <li class="controls__item">
                   <label class="controls__elem">
                     <input type="checkbox" class="controls__checkbox">
-                    <div class="controls__tag tag">Карта оптима</div> <!--модификатор-->
+                    <span class="controls__tag tag">Карта оптима</span> <!--модификатор-->
                   </label>
                 </li>
                 <li class="controls__item">
                   <label class="controls__elem">
                     <input type="checkbox" class="controls__checkbox">
-                    <div class="controls__tag tag">Автокредит на 5 лет</div> <!--модификатор-->
+                    <span class="controls__tag tag">Автокредит на 5 лет</span> <!--модификатор-->
                   </label>
                 </li>
                 <li class="controls__item">
                   <label class="controls__elem">
                     <input type="checkbox" class="controls__checkbox">
-                    <div class="controls__tag tag">Никакими</div> <!--модификатор-->
+                    <span class="controls__tag tag">Никакими</span> <!--модификатор-->
                   </label>
                 </li>
                 <li class="controls__item">
                   <label class="controls__elem">
                     <input type="checkbox" class="controls__checkbox">
-                    <div class="controls__tag tag">Ипотека на 20 лет</div> <!--модификатор-->
+                    <span class="controls__tag tag">Ипотека на 20 лет</span> <!--модификатор-->
                   </label>
                 </li>
                 <li class="controls__item">
                   <label class="controls__elem">
                     <input type="checkbox" class="controls__checkbox">
-                    <div class="controls__tag tag">Другое</div> <!--модификатор-->
+                    <span class="controls__tag tag">Другое</span> <!--модификатор-->
                   </label>
                 </li>
                 <li class="controls__item">
                   <label class="controls__elem">
                     <input type="checkbox" class="controls__checkbox">
-                    <div class="controls__tag tag">Страхование</div> <!--модификатор-->
+                    <span class="controls__tag tag">Страхование</span> <!--модификатор-->
                   </label>
                 </li>
                 <li class="controls__item">
                   <label class="controls__elem">
                     <input type="checkbox" class="controls__checkbox">
-                    <div class="controls__tag tag">Кредитная карта</div> <!--модификатор-->
+                    <span class="controls__tag tag">Кредитная карта</span> <!--модификатор-->
                   </label>
                 </li>
                 <li class="controls__item">
                   <label class="controls__elem">
                     <input type="checkbox" class="controls__checkbox">
-                    <div class="controls__tag tag">Автокредит на 7 лет</div> <!--модификатор-->
+                    <span class="controls__tag tag">Автокредит на 7 лет</span> <!--модификатор-->
                   </label>
                 </li>
               </ul>
