Неделя 4. Услуги. Ссылки на партнеров

--- a/service.html
+++ b/service.html
@@ -146,42 +146,42 @@
           <h2 class="inner-section__title">Партнеры</h2>
           <ul class="partners">
             <li class="partners__item">
-              <a href="#" class="partners__link">
+              <a href="https://yandex.ru/" target="_blank" class="partners__link">
                 <img src="./images/icons/partners/yandex.png" alt="yandex logo" class="partners__logo">
               </a>
             </li>
             <li class="partners__item">
-              <a href="#" class="partners__link">
+              <a href="https://www.rambler.ru/" target="_blank" class="partners__link">
                 <img src="./images/icons/partners/rambler.png" alt="rambler logo" class="partners__logo">
               </a>
             </li>
             <li class="partners__item">
-              <a href="#" class="partners__link">
+              <a href="https://www.tinkoff.ru/" target="_blank" class="partners__link">
                 <img src="./images/icons/partners/tinkoff.png" alt="tinkoff logo" class="partners__logo">
               </a>
             </li>
             <li class="partners__item">
-              <a href="#" class="partners__link">
+              <a href="https://www.sberbank.ru/" target="_blank" class="partners__link">
                 <img src="./images/icons/partners/sberbank.png" alt="sberbank logo" class="partners__logo">
               </a>
             </li>
             <li class="partners__item">
-              <a href="#" class="partners__link">
+              <a href="https://rencredit.ru/" target="_blank" class="partners__link">
                 <img src="./images/icons/partners/renessans.png" alt="renaissance logo" class="partners__logo">
               </a>
             </li>
             <li class="partners__item">
-              <a href="#" class="partners__link">
+              <a href="https://www.vtb.ru/" target="_blank" class="partners__link">
                 <img src="./images/icons/partners/vtb.png" alt="vtb logo" class="partners__logo">
               </a>
             </li>
             <li class="partners__item">
-              <a href="#" class="partners__link">
+              <a href="https://www.vostbank.ru/" target="_blank" class="partners__link">
                 <img src="./images/icons/partners/western.png" alt="eastern bank logo" class="partners__logo">
               </a>
             </li>
             <li class="partners__item">
-              <a href="#" class="partners__link">
+              <a href="https://www.open.ru/" target="_blank" class="partners__link">
                 <img src="./images/icons/partners/openbank.png" alt="open bank logo" class="partners__logo">
               </a>
             </li>
