--- a/reviews.html
+++ b/reviews.html
@@ -18,37 +18,33 @@
         <div class="container page-line__container">
           <!--модификатор-->
           <header class="header header_pt_small"> <!--модификатор-->
-            <div class="header__col">
-              <a href="./main.html" class="logo logo_horizontal"> <!--модификатор-->
-                <img src="./images/logo.png" alt="lion bank logo" class="logo__image">
-              </a>
-              <nav class="menu">
-                <ul class="menu__list">
-                  <li class="menu__item">
-                    <a href="./main.html" class="menu__link">Главная</a>
-                  </li>
-                  <li class="menu__item">
-                    <!--модификатор-->
-                    <a href="./service.html" class="menu__link">Услуги</a>
-                  </li>
-                  <li class="menu__item menu__item_active">
-                    <a href="./reviews.html" class="menu__link">Отзывы</a>
-                  </li>
-                </ul>
-              </nav>
-            </div>
-            <div class="header__col header__col_align_right">
-              <!--модификатор-->
-              <address class="contacts">
-                <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-                <div class="contacts__dropdown">
-                  <div class="contacts__dropdown-title">График работы</div>
-                  <div class="contacts__dropdown-text">
-                    <span class="contacts__dropdown-workhours">пн-вс: 09:00 - 20:00</span> Обед: 14:00-14:30
-                  </div>
+            <a href="./main.html" class="logo logo_horizontal"> <!--модификатор-->
+              <img src="./images/logo.png" alt="lion bank logo" class="logo__image">
+            </a>
+            <nav class="menu">
+              <ul class="menu__list">
+                <li class="menu__item">
+                  <a href="./main.html" class="menu__link">Главная</a>
+                </li>
+                <li class="menu__item">
+                  <!--модификатор-->
+                  <a href="./service.html" class="menu__link">Услуги</a>
+                </li>
+                <li class="menu__item menu__item_active">
+                  <a href="./reviews.html" class="menu__link">Отзывы</a>
+                </li>
+              </ul>
+            </nav>
+            <!--модификатор-->
+            <address class="contacts contacts_align_right">
+              <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
+              <div class="contacts__dropdown">
+                <div class="contacts__dropdown-title">График работы</div>
+                <div class="contacts__dropdown-text">
+                  <span class="contacts__dropdown-workhours">пн-вс: 09:00 - 20:00</span> Обед: 14:00-14:30
                 </div>
-              </address>
-            </div>
+              </div>
+            </address>
           </header>
 
           <h1 class="page-title">Отзывы</h1>
@@ -300,52 +296,48 @@
       <div class="container">
         <div class="footer">
           <!--для переиспользования-->
-          <div class="footer__col">
-            <a href="./main.html" class="logo logo_horizontal"> <!--модификатор-->
-              <img src="./images/logo.png" alt="lion bank logo" class="logo__image">
-            </a>
-            <nav class="menu">
-              <ul class="menu__list">
-                <li class="menu__item">
-                  <a href="./main.html" class="menu__link">Главная</a>
-                </li>
-                <li class="menu__item">
-                  <a href="./service.html" class="menu__link">Услуги</a>
-                </li>
-                <li class="menu__item">
-                  <a href="./reviews.html" class="menu__link">Отзывы</a>
-                </li>
-              </ul>
-            </nav>
-          </div>
-          <div class="footer__col footer__col_align_right">
-            <ul class="socials">
-              <li class="socials__item socials__item_icon_telegram">
-                <a href="#" class="socials__link">
-                  <!-- <img src="./images/icons/socials/telegram-hover.png" alt="telegram icon" class="socials__icon"> -->
-                </a>
+          <a href="./main.html" class="logo logo_horizontal"> <!--модификатор-->
+            <img src="./images/logo.png" alt="lion bank logo" class="logo__image">
+          </a>
+          <nav class="menu">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a href="./main.html" class="menu__link">Главная</a>
               </li>
-              <li class="socials__item socials__item_icon_vk">
-                <a href="#" class="socials__link">
-                  <!-- <img src="./images/icons/socials/vk-hover.png" alt="vkontakte icon" class="socials__icon"> -->
-                </a>
+              <li class="menu__item">
+                <a href="./service.html" class="menu__link">Услуги</a>
               </li>
-              <li class="socials__item socials__item_icon_fb">
-                <a href="#" class="socials__link">
-                  <!-- <img src="./images/icons/socials/facebook-hover.png" alt="facebook icon" class="socials__icon"> -->
-                </a>
-              </li>
-              <li class="socials__item socials__item_icon_insta">
-                <a href="#" class="socials__link">
-                  <!-- <img src="./images/icons/socials/instagram-hover.png" alt="instagram icon" class="socials__icon"> -->
-                </a>
+              <li class="menu__item">
+                <a href="./reviews.html" class="menu__link">Отзывы</a>
               </li>
             </ul>
-            <address class="contacts">
-              <div class="contacts__desc">Бесплатный звонок по России</div>
-              <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-            </address>
-          </div>
+          </nav>
+          <ul class="socials">
+            <li class="socials__item socials__item_icon_telegram">
+              <a href="#" class="socials__link">
+                <!-- <img src="./images/icons/socials/telegram-hover.png" alt="telegram icon" class="socials__icon"> -->
+              </a>
+            </li>
+            <li class="socials__item socials__item_icon_vk">
+              <a href="#" class="socials__link">
+                <!-- <img src="./images/icons/socials/vk-hover.png" alt="vkontakte icon" class="socials__icon"> -->
+              </a>
+            </li>
+            <li class="socials__item socials__item_icon_fb">
+              <a href="#" class="socials__link">
+                <!-- <img src="./images/icons/socials/facebook-hover.png" alt="facebook icon" class="socials__icon"> -->
+              </a>
+            </li>
+            <li class="socials__item socials__item_icon_insta">
+              <a href="#" class="socials__link">
+                <!-- <img src="./images/icons/socials/instagram-hover.png" alt="instagram icon" class="socials__icon"> -->
+              </a>
+            </li>
+          </ul>
+          <address class="contacts">
+            <div class="contacts__desc">Бесплатный звонок по России</div>
+            <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
+          </address>
         </div>
       </div>
     </footer>
