Неделя 4. Отзывы. Иконка vk перенесена в разметку с псевдоэлемента

--- a/reviews.html
+++ b/reviews.html
@@ -71,7 +71,12 @@
                   <img src="./images/content/reviews/ginger.jpg" alt="user avatar" class="avatar__img">
                 </div>
                 <div class="review__userdata">
-                  <a href="#" class="review__user">Иван Петрович</a>
+                  <div class="review__user">
+                    <a href="#" class="review__username">Иван Петрович</a>
+                    <div class="review__icon-wrapper">
+                      <img src="./images/icons/socials/vk-colored.png" alt="vk colored icon" class="review__icon">
+                    </div>
+                  </div>
                   <ul class="review__tags">
                     <li class="review__tag-item tag tag_bg_green">Карта базовая</li> <!--модификатор-->
                     <li class="review__tag-item tag tag_bg_green">Ипотека на 10 лет</li> <!--модификатор-->
@@ -97,7 +102,12 @@
                   <img src="./images/content/reviews/liza.jpg" alt="user avatar" class="avatar__img">
                 </div>
                 <div class="review__userdata">
-                  <a href="#" class="review__user">Лиза Сидорова</a>
+                  <div class="review__user">
+                    <a href="#" class="review__username">Лиза Сидорова</a>
+                    <div class="review__icon-wrapper">
+                      <img src="./images/icons/socials/vk-colored.png" alt="vk colored icon" class="review__icon">
+                    </div>
+                  </div>
                   <ul class="review__tags">
                     <li class="review__tag-item tag tag_bg_green">Карта оптима</li> <!--модификатор-->
                   </ul>
@@ -122,7 +132,12 @@
                   <img src="./images/content/reviews/girl.jpg" alt="user avatar" class="avatar__img">
                 </div>
                 <div class="review__userdata">
-                  <a href="#" class="review__user">Екатерина Жмых</a>
+                  <div class="review__user">
+                    <a href="#" class="review__username">Екатерина Жмых</a>
+                    <div class="review__icon-wrapper">
+                      <img src="./images/icons/socials/vk-colored.png" alt="vk colored icon" class="review__icon">
+                    </div>
+                  </div>
                   <ul class="review__tags">
                     <li class="review__tag-item tag tag_bg_green">Ипотека на 10 лет</li> <!--модификатор-->
                   </ul>
@@ -149,7 +164,12 @@
                   <img src="./images/content/reviews/guy.jpg" alt="user avatar" class="avatar__img">
                 </div>
                 <div class="review__userdata">
-                  <a href="#" class="review__user">Антон Игоревич</a>
+                  <div class="review__user">
+                    <a href="#" class="review__username">Антон Игоревич</a>
+                    <div class="review__icon-wrapper">
+                      <img src="./images/icons/socials/vk-colored.png" alt="vk colored icon" class="review__icon">
+                    </div>
+                  </div>
                   <ul class="review__tags">
                     <li class="review__tag-item tag tag_bg_green">Автокредит на 5 лет</li> <!--модификатор-->
                   </ul>
